feat(ui): improved styling and layout across various pages, add favicon, add unread count functionality in chat

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matcha</title>
+    <title>Matcha - Find Your Perfect Match</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Google Fonts: Sora (headings) + DM Sans (body) + Pacifico (logo) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700&family=Pacifico&display=swap" rel="stylesheet">
+
+    <!-- Meta tags for better SEO and social sharing -->
+    <meta name="description" content="Matcha - A modern dating application to find your perfect match" />
+    <meta name="theme-color" content="#8fb339" />
   </head>
   <body class="min-h-screen min-w-screen">
     <div id="root"></div>
